PA2/samples/wrong_syntax_5.out

*** Error line 1.
int foo(var1) {
        ^^^^
*** syntax error

