PA2/samples/wrong_syntax_5.java
int foo(var1) {
    return 1;
}